src/test/resources/integration-test/external/privates.expect
noooooo

An error occurred:
privates.twl
Error at line 10 character 13.
Unknown identifier 'myprivate'.
