src/test/resources/integration-test/external/privates.twl
import "privatesinc.twl"
import <io>

// ok
privatesinc.mypublic io.println

// bad
privatesinc.myprivate io.println